<resources>
    <string name="app_name">Lab3</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">JSON</string>


    <string name="tilHintTitle">Fill in the title of the movie</string>
    <string name="tilHintDate">"Fill in the release date of the movie"</string>
    <string name="tilHintProfit"> Fill in the profit of the movie </string>
    <string name="rbNetflix">Netflix</string>
    <string name="rbHBO">HBO</string>
    <string name="tvSpinner"> Please select the genre of the movie </string>
    <string name="btnSave">Save</string>
    <string name="errorValidation"> Input is not valid </string>
    <string name="tvMovieGenre">Movie Genre</string>
    <string name="tvMovieTitle">Movie Title</string>
    <string name="tvPlatform">Platform</string>

    <string name="tvReleaseDate">Release Date</string>
    <string name="tvProfit">Profit</string>


    <!-- un array of strings, elementele of the array are declared via the tag "item" -->
    <string-array name="movie_genre">
        <item>Thriller</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>SF</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btnRunnable">Runnable</string>
    <string name="btnCallable">Callable</string>
</resources>